--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -3111,9 +3111,35 @@ $tooltip-arrow-rotation: 225deg;
     #intro-overlay {
         font-size: 150%;
     }
+    #glossary header h1 {
+        width: auto;
+    }
+    #glossary h2 {
+        margin-left: 4px;
+    }
     #glossary #alphabet {
         line-height: 250%;
         width: auto;
+    }
+    #glossary #alphabet li {
+        border: 0;
+        padding: 1px 10px;
+    }
+    #glossary #terms {
+        width: auto;
+    }
+    #glossary #terms dt {
+        border-top: 0;
+        clear: none;
+        float: none;
+        font-weight: bold;
+        padding-bottom: 0;
+        width: auto;
+    }
+    #glossary #terms dd {
+        border-top: 0;
+        margin: 0;
+        padding: 0 5px 10px 39px;
     }
     .gb-tooltip {
         width: 200px;
