Glossary pages: fix icon transparency and adjust position. (#164)

--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -36,7 +36,7 @@
                 {% if term.image %}
                     <a rel="shadowbox" href="{{ term.image.url }}">
                         <img alt="{{ term.term }}" 
-                        src="/static/images/icons/camera.jpg"></a>
+                        src="/static/images/icons/icon-camera.png"></a>
                 {% endif %}
                 {{ term.term }}
             </dt>
