--- a/gobotany/static/sass/styles.scss
+++ b/gobotany/static/sass/styles.scss
@@ -1466,10 +1466,16 @@ div.working-area #simple-slider .count {
     position: absolute;
 }
 
+/* Slider styles */
+$slider-background-top-color: #c1d9a7;
+$slider-background-bottom-color: #ffffff;
+$slider-bar-radius: 4px;
+$slider-thumb-radius: 16px;
+$slider-thumb-shadow-lengths: 0 1px 6px 1px;
+$slider-thumb-shadow-color: #333333;
 
 div.working-area #slider {
-    border: 1px dashed #ccc;
-    height: 60px;
+    height: 70px;
     margin: 10px 0;
     padding: 20px 0 0 0;
     position: relative;
@@ -1477,7 +1483,7 @@ div.working-area #slider {
 div.working-area #slider .bar {
     padding: 0 4px;
     position: absolute;
-    top: 38px;
+    top: 47px;
     width: 100%;
 
     -moz-box-sizing: border-box;
@@ -1485,17 +1491,32 @@ div.working-area #slider .bar {
     box-sizing: border-box;
 }
 div.working-area #slider .bar div {
-    border: 1px solid #666;
-    height: 4px;
+    background: -webkit-gradient(linear, left top, left bottom,
+        color-stop(0%, $slider-background-top-color),
+        color-stop(100%, $slider-background-bottom-color));
+    background: -moz-linear-gradient(center top,
+        $slider-background-top-color, $slider-background-bottom-color);
+    border: 1px solid $slider-background-top-color;
+    height: 8px;
+
+    -moz-border-radius: $slider-bar-radius;
+    -webkit-border-radius: $slider-bar-radius;
+    -o-border-radius: $slider-bar-radius;
+    -ms-border-radius: $slider-bar-radius;
+    -khtml-border-radius: $slider-bar-radius;
+    border-radius: $slider-bar-radius;
 }
-$slider-thumb-radius: 16px;
 div.working-area #slider .thumb {
-    background: green;
-    border: 1px solid green;
+    background: -webkit-gradient(linear, left top, left bottom,
+        color-stop(0%, $slider-background-top-color),
+        color-stop(100%, $slider-background-bottom-color));
+    background: -moz-linear-gradient(center top,
+        $slider-background-top-color, $slider-background-bottom-color);
+    border: 1px solid $slider-background-bottom-color;
     height: 30px;
     position: absolute;
     text-align: center;
-    top: 25px;
+    top: 35px;
     width: 30px;
 
     -moz-border-radius: $slider-thumb-radius;
@@ -1504,11 +1525,16 @@ div.working-area #slider .thumb {
     -ms-border-radius: $slider-thumb-radius;
     -khtml-border-radius: $slider-thumb-radius;
     border-radius: $slider-thumb-radius;
+
+    -moz-box-shadow: $slider-thumb-shadow-lengths $slider-thumb-shadow-color;
+    -webkit-box-shadow: $slider-thumb-shadow-lengths $slider-thumb-shadow-color;
+    -o-box-shadow: $slider-thumb-shadow-lengths $slider-thumb-shadow-color;
+    box-shadow: $slider-thumb-shadow-lengths $slider-thumb-shadow-color;
 }
 div.working-area #slider .label {
     font-size: 16px;
     position: relative;
-    top: -28px;
+    top: -36px;
 }
 div.working-area #slider .bar, div.working-area #slider .bar div,
 div.working-area #slider .label {
