Slider: remove old code throughout the site for using Dijit. (#86)

--- a/gobotany/simplekey/templates/montshire/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/montshire/simplekey/help_start.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}Getting Started with the Simple Key at Montshire{% endblock %}
 
-{% block body_attributes %}id="getting-started" class="claro app getting-started"{% endblock %}
+{% block body_attributes %}id="getting-started" class="app getting-started"{% endblock %}
 
 {% block main_content %}			
     <h2>Getting Started with the Simple Key at Montshire</h2>
