--- a/gobotany/simplekey/templates/simplekey/family.html
+++ b/gobotany/simplekey/templates/simplekey/family.html
@@ -22,7 +22,7 @@ Family: {{ family.name }} {% if common_name %}({{ common_name|cut:"The "|lower }
     });
 {% endblock %}
 
-{% block body_attributes %}id="family" class="claro app family"{% endblock %}
+{% block body_attributes %}id="family" class="app family"{% endblock %}
 
 {% block body_content %}
     {% include "simplekey/_header.html" %}
