--- a/gobotany/simplekey/templates/simplekey/full_key_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/full_key_placeholder.html
@@ -2,7 +2,7 @@
 
 {% block title %}Full Key{% endblock %}
 
-{% block body_attributes %}id="advanced-id" class="claro app teaching-tools"{% endblock %}
+{% block body_attributes %}id="advanced-id" class="app teaching-tools"{% endblock %}
 
 {% block js_require %}
     require(['util/sidebar'], function(sidebar) {
