--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}About Go-Botany{% endblock %}
 
-{% block body_attributes %}id="about" class="claro app about"{% endblock %}
+{% block body_attributes %}id="about" class="app about"{% endblock %}
 
 {% block main_content %}
     <h2>About Go Botany</h2>
