--- a/gobotany/simplekey/templates/simplekey/help_glossary.html
+++ b/gobotany/simplekey/templates/simplekey/help_glossary.html
@@ -13,7 +13,7 @@
     require(['simplekey/help_glossary']);
 {% endblock %}
 
-{% block body_attributes %}id="glossary" class="claro app glossary"{% endblock %}
+{% block body_attributes %}id="glossary" class="app glossary"{% endblock %}
 
 {% block main_content %}
     <h2>Glossary: {{ this_letter|upper }}</h2>
