--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -7,7 +7,7 @@
     require(['simplekey/help_map']);
 {% endblock %}
 
-{% block body_attributes %}id="advanced-map" class="claro app advanced-map"{% endblock %}
+{% block body_attributes %}id="advanced-map" class="app advanced-map"{% endblock %}
 
 {% block main_content %}     
 <div>
