--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -10,7 +10,7 @@
         href="http://{{ request.META.HTTP_HOST }}/plantoftheday/atom.xml">
 {% endblock %}
 
-{% block body_attributes %}id="home" class="claro top-level"{% endblock %}
+{% block body_attributes %}id="home" class="top-level"{% endblock %}
 
 {% block js_require %}
     require(['simplekey/index']);
