--- a/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
+++ b/gobotany/simplekey/templates/simplekey/plantshare_placeholder.html
@@ -2,7 +2,7 @@
 
 {% block title %}PlantShare{% endblock %}
 
-{% block body_attributes %}id="plantshare" class="claro app plantshare"{% endblock %}
+{% block body_attributes %}id="plantshare" class="app plantshare"{% endblock %}
 
 {% block js_require %}
     require(['util/sidebar'], function(sidebar) {
