--- a/gobotany/simplekey/templates/simplekey/search.html
+++ b/gobotany/simplekey/templates/simplekey/search.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body_attributes %}
-    id="search-results" class="claro app search-results"
+    id="search-results" class="app search-results"
 {% endblock %}
 
 {% block body_content %}
