--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -3,7 +3,7 @@
 
 {% block title %}{{ groups_list_page.title }}{% endblock %}
 
-{% block body_attributes %}id="plant-id" class="claro app"{% endblock %}
+{% block body_attributes %}id="plant-id" class="app"{% endblock %}
 
 {% block js_top %}
     {# TODO: eventually move elsewhere #}
