--- a/gobotany/simplekey/templates/simplekey/teaching_tools.html
+++ b/gobotany/simplekey/templates/simplekey/teaching_tools.html
@@ -2,7 +2,7 @@
 
 {% block title %}Teaching Tools{% endblock %}
 
-{% block body_attributes %}id="teaching-tools" class="claro app teaching-tools"{% endblock %}
+{% block body_attributes %}id="teaching-tools" class="app teaching-tools"{% endblock %}
 
 {% block js_require %}
     require(['util/sidebar'], function(sidebar) {
