--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -2,7 +2,7 @@
 
 {% block title %}Advanced ID Tools{% endblock %}
 
-{% block body_attributes %}id="advanced-id" class="claro app advanced-id"{% endblock %}
+{% block body_attributes %}id="advanced-id" class="app advanced-id"{% endblock %}
 
 {% block js_require %}
     require(['util/sidebar'], function(sidebar){
