--- a/gobotany/simplekey/templates/simplekey/genus.html
+++ b/gobotany/simplekey/templates/simplekey/genus.html
@@ -23,7 +23,7 @@ Genus: {{ genus.name }} {% if common_name %}({{ common_name }}){% endif %}
     });
 {% endblock %}
 
-{% block body_attributes %}id="genus" class="claro app genus"{% endblock %}
+{% block body_attributes %}id="genus" class="app genus"{% endblock %}
 
 {% block body_content %}
     {% include "simplekey/_header.html" %}
