--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -2,7 +2,7 @@
 
 {% block pagetitle %}Getting Started with the Simple Key{% endblock %}
 
-{% block body_attributes %}id="getting-started" class="claro app getting-started"{% endblock %}
+{% block body_attributes %}id="getting-started" class="app getting-started"{% endblock %}
 
 {% block main_content %}			
     <h2>Getting Started with the Simple Key</h2>
