--- a/gobotany/simplekey/templates/simplekey/privacy.html
+++ b/gobotany/simplekey/templates/simplekey/privacy.html
@@ -2,7 +2,7 @@
 
 {% block title %}Privacy Policy{% endblock %}
 
-{% block body_attributes %}id="privacy-policy" class="claro app privacy-policy"{% endblock %}
+{% block body_attributes %}id="privacy-policy" class="app privacy-policy"{% endblock %}
 
 {% block js_require %}
     require(['util/sidebar'], function(sidebar) {
