--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -13,7 +13,7 @@
     });
 {% endblock %}
 
-{% block body_attributes %}id="plant-id-3" class="claro app"{% endblock %}
+{% block body_attributes %}id="plant-id-3" class="app"{% endblock %}
 
 {% block body_content %}
     {% include "simplekey/_header.html" %}
