--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -4,7 +4,7 @@
 {% block title %}{{ scientific_name }} 
 ({% for common_name in taxon.common_names.all %}{% if not forloop.first %}, {% endif %}{{ common_name }}{% endfor %}){% endblock %}
 
-{% block body_attributes %}id="taxon" class="claro app taxon"{% endblock %}
+{% block body_attributes %}id="taxon" class="app taxon"{% endblock %}
 
 {% block js_top %}
     {# SVGWeb script: must be first of all JS, must have data-path. #}
