--- a/gobotany/simplekey/templates/simplekey/species_list.html
+++ b/gobotany/simplekey/templates/simplekey/species_list.html
@@ -3,7 +3,7 @@
 
 {% block title %}Species List{% endblock %}
 
-{% block body_attributes %}id="list" class="claro app list"{% endblock %}
+{% block body_attributes %}id="list" class="app list"{% endblock %}
 
 {% block js_require %}
     require(['simplekey/species_list']);
