--- a/gobotany/simplekey/templates/simplekey/terms.html
+++ b/gobotany/simplekey/templates/simplekey/terms.html
@@ -2,7 +2,7 @@
 
 {% block title %}Terms of Use{% endblock %}
 
-{% block body_attributes %}id="terms-of-use" class="claro app terms-of-use"{% endblock %}
+{% block body_attributes %}id="terms-of-use" class="app terms-of-use"{% endblock %}
 
 {% block js_require %}
     require(['util/sidebar'], function(sidebar) {
